kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brigade2-nginx
spec:
  selector:
    app: brigade2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
