kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: brigade2-nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - brigade-cas-sledenja.djnd.si
        - brigade-cas-sledenja.danesjenovdan.si
      secretName: brigade2-nginx-tls
  rules:
    - host: brigade-cas-sledenja.djnd.si
      http: &http_paths
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: brigade2-nginx
                port:
                  number: 80
    - host: brigade-cas-sledenja.danesjenovdan.si
      http: *http_paths
